# mnemo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/mnemo/: __init__.py
src/mnemo/api/: __init__.py  ask_types.py  client.py  kb_api.py  mcp_server.py  server.py  types.py
src/mnemo/builtin/workflows/: add.workflow.toml  ask.workflow.toml  search.workflow.toml
src/mnemo/cli/: formatter.py  main.py
src/mnemo/cli/commands/: __init__.py  add.py  ask.py  check.py  config.py  db_cmd.py  export_cmd.py  import_cmd.py  info.py  init_cmd.py  key.py  list_cmd.py  plugin.py  reindex.py  remove.py  reorg.py  search.py  status_cmd.py  sync.py  trash.py  update.py  watch.py
src/mnemo/core/: __init__.py  agent_manager.py  diagnostics.py  embedder.py  file_watcher.py  kb.py  kb_ask.py  metadata_writer.py  param_config.py  plugin_base.py  prompt_manager.py  trash_store.py
src/mnemo/core/interfaces/: __init__.py  chunker.py  config_loader.py  entity_extractor.py  exporter.py  file_category.py  graph_store.py  importer.py  indexer.py  key_manager.py  param_spec.py  parser.py  reorganizer.py  searcher.py  syncer.py  template.py  types.py  vector_store.py  watcher.py
src/mnemo/core/workflow/: __init__.py  add_steps.py  agent_registry.py  config.py  context.py  dag.py  engine.py  events.py  search_steps.py  step.py  tools.py
src/mnemo/plugins/: base.py
src/mnemo/plugins/chunkers/: __init__.py  fixed_size_chunker.py  langchain_chunker.py  paragraph_chunker.py  semantic_chunker.py  small_to_big_chunker.py  token_chunker.py
src/mnemo/plugins/entity_extractors/: llm_entity_extractor.py
src/mnemo/plugins/exporters/: tar_exporter.py
src/mnemo/plugins/file_categories/: audio.py  code.py  code_py.py  data.py  docs.py  img.py  other.py  video.py  web.py
src/mnemo/plugins/graph_stores/: sqlite_graph_store.py
src/mnemo/plugins/importers/: tar_importer.py
src/mnemo/plugins/indexers/: sqlite_indexer.py
src/mnemo/plugins/key_managers/: sqlite_key_manager.py
src/mnemo/plugins/parsers/: code.py  data_file.py  image.py  pdf.py  text.py  url.py
src/mnemo/plugins/searchers/: graph_expander.py  keyword_searcher.py  lightrag_searcher.py  simple_searcher.py
src/mnemo/plugins/syncers/: rclone_syncer.py
src/mnemo/plugins/templates/: code_tmpl.py  dataset.py  note.py  paper.py
src/mnemo/plugins/vector_stores/: lancedb_store.py
src/mnemo/prompts/: __init__.py  builtin.toml  env.template
src/mnemo/utils/: api_errors.py  config.py  hash.py  logging.py  path.py
